kubernetes/k8s-deployment.yaml
###################################
# abcall-customer-api
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abcall-issues-api
  labels:
    app: abcall-issues-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: abcall-issues-api
  template:
    metadata:
      labels:
        app: abcall-issues-api
    spec:
      containers:
        - name: abcall-issues-api
          image: abcall.azurecr.io/abcall-issues-api:1.0.0
          ports:
            - containerPort: 3007
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: abcall-issues-api-service
spec:
  type: LoadBalancer
  selector:
    app: abcall-issues-api
  ports:
    - protocol: TCP
      port: 3007
      targetPort: 3007
